<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#A7CEF4"
    android:padding="25dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/LogoImageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/donbosco"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="55dp"/>

    <TextView
        android:id="@+id/textV2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textV2"
        android:textAlignment="center"
        android:textSize="30dp"
        android:fontFamily="@font/cantora_one"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textV3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textV3"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:fontFamily="@font/cantora_one"
        android:textColor="@color/purple_700"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp">



        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textV4"
            android:textStyle="bold"
            android:drawableTint="@color/black"
            android:textColorHint="#C50303"
            android:padding="20dp"
            android:id="@+id/textV4"
            android:drawableStart="@drawable/ic_email"
            android:background="@drawable/border_text"
            android:letterSpacing="0.1"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/textV5"
            android:layout_height="match_parent"
            android:hint="@string/textV5"
            android:padding="20dp"
            android:drawableStart="@drawable/ic_lock"
            android:background="@drawable/border_text"
            android:letterSpacing="0.1"
            android:textColorHint="#C50303"
            android:textStyle="bold"
            android:drawableTint="@color/black"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/textV6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/cantora_one"
            android:text="@string/textV6"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:textColor="#C11111"
            android:clickable="true"
            android:focusable="true"
            android:textSize="15dp" />

        <Button
            android:id="@+id/Boton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/border_button"
            android:text="@string/Button1"
            android:textColor="@color/white"
            android:onClick="siguiente"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textV7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/textV7"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:fontFamily="@font/cantora_one"
            android:textStyle="bold"/>

    </LinearLayout>


</LinearLayout>